RESOLVED FIXED130697
REGRESSION (r165872): Double-applying device scale to snapshots
https://bugs.webkit.org/show_bug.cgi?id=130697
Summary REGRESSION (r165872): Double-applying device scale to snapshots
Tim Horton
Reported 2014-03-24 15:20:49 PDT
I made a mistake in r165872 that caused us to apply the device scale twice when snapshotting via scaledSnapshotWithOptions. <rdar://problem/16396629>
Attachments
patch (3.73 KB, patch)
2014-03-24 15:43 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-03-24 15:43:21 PDT
Created attachment 227697 [details] patch 1) We need snapshotting tests desperately, there are too many combinations of options to not have some tests. 2) I need to test WKThumbnailView before landing this.
Tim Horton
Comment 2 2014-03-24 16:14:59 PDT
Note You need to log in before you can comment on or make changes to this bug.