REGRESSION (r165872): Double-applying device scale to snapshots https://bugs.webkit.org/show_bug.cgi?id=130697 <rdar://problem/16396629>

Reviewed by Simon Fraser.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::scaledSnapshotWithOptions):
Drive-by, make scaledSnapshotWithOptions respect SnapshotOptionsExcludeDeviceScaleFactor.

(WebKit::WebPage::snapshotAtSize):
Divide the device scale out of the scale factor

* WebProcess/WebPage/WebPage.h:
Rename the scale argument to scaledSnapshotWithOptions to clarify
that it is an additional scale on top of the device scale.


Canonical link: https://commits.webkit.org/148734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166203 268f45cc-cd09-0410-ab3c-d52691b4dbfc